# EVENTO

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: push_to_any_brach.yml
appointment/: README.md  main.py  pyproject.toml
appointment/dto/: Agent.py  Appointment.py  Client.py  Common.py
db/: Collections.py  Dockerfile  crud.py  main.py  models.py  pyproject.toml
db/models/: Agent.py  Appointment.py  Client.py  Event.py  __init__.py
db/routers/: agent.py  appointment.py  client.py  event.py
db_api/: .dockerignore  Dockerfile  collections.py  main.py  models.py  own_types.py  pyproject.toml
db_api/crud/: agent.py  appointment.py  client.py  common.py  event.py
dto/: Agent.py  Client.py  Common.py  Event.py
models/: Agent.py  Client.py  Event.py  Service.py
